@@ -48,11 +48,14 @@
 // #define debug fatal
 #endif
 
-#define	NREGS		(0x100/sizeof(uint32_t))
+#define	NREGS_GDROM_DMA		(0x100/sizeof(uint32_t))
+#define	NREGS_EXT_DMA		(0x80/sizeof(uint32_t))
+#define	NREGS_MISC		(0x80/sizeof(uint32_t))
 
 struct dreamcast_g2_data {
-	uint32_t	extdma_reg[NREGS];
-	uint32_t	unknown_reg[NREGS];
+	uint32_t	extdma_reg[NREGS_EXT_DMA];
+	uint32_t	gdrom_dma_reg[NREGS_GDROM_DMA];
+	uint32_t	misc_reg[NREGS_MISC];
 };
 
 
@@ -237,7 +240,7 @@ DEVICE_ACCESS(dreamcast_g2_extdma)
 }
 
 
-DEVICE_ACCESS(dreamcast_g2_unknown)
+DEVICE_ACCESS(dreamcast_g2_gdrom_dma)
 {
 	struct dreamcast_g2_data *d = (struct dreamcast_g2_data *) extra;
 	uint64_t idata = 0, odata = 0;
@@ -247,46 +250,32 @@ DEVICE_ACCESS(dreamcast_g2_unknown)
 
 	/*  Default read:  */
 	if (writeflag == MEM_READ)
-		odata = d->unknown_reg[relative_addr / sizeof(uint32_t)];
+		odata = d->gdrom_dma_reg[relative_addr / sizeof(uint32_t)];
 
 	switch (relative_addr) {
 
-	case 0x80:
-		if (writeflag != MEM_WRITE || idata != 0x400) {
-			fatal("[ dreamcast_g2_unknown: unimplemented 0x80 ]\n");
-			exit(1);
-		}
+	case 0x04:	// destination address? e.g. 0x8c008000
+	case 0x08:	// DMA length in bytes?
+	case 0x0c:	// "1"?
 		break;
 
-	case 0x90:
-	case 0x94:
-/*		if (writeflag != MEM_WRITE || idata != 0x222) {
-			fatal("[ dreamcast_g2_unknown: unimplemented 0x90 ]\n");
+	case 0x18:
+		// GDROM DMA start?
+		if (idata != 0) {
+			fatal("GDROM DMA start?\n");
+			fatal("  %08x\n", (int) d->gdrom_dma_reg[4 / sizeof(uint32_t)]);
+			fatal("  %08x\n", (int) d->gdrom_dma_reg[8 / sizeof(uint32_t)]);
+			fatal("  %08x\n", (int) d->gdrom_dma_reg[0xc / sizeof(uint32_t)]);
+			fatal("  %08x\n", (int) d->gdrom_dma_reg[0x14 / sizeof(uint32_t)]);
 			exit(1);
 		}
-*/		break;
-
-	case 0xa0:
-	case 0xa4:
-		if (writeflag != MEM_WRITE || idata != 0x2001) {
-			fatal("[ dreamcast_g2_unknown: unimplemented 0xa0 ]\n");
-			exit(1);
-		}
-		break;
-
-	case 0xe4:
-		/*  Writing 0x1fffff resets a disabled GD-ROM drive?  */
-		if (writeflag != MEM_WRITE || idata != 0x1fffff) {
-			fatal("[ dreamcast_g2_unknown: unimplemented 0xe4 ]\n");
-			exit(1);
-		}
-		break;
+		break;			
 
 	default:if (writeflag == MEM_READ) {
-			fatal("[ dreamcast_g2_unknown: read from addr 0x%x ]\n",
+			fatal("[ dreamcast_g2_gdrom_dma: read from addr 0x%x ]\n",
 			    (int)relative_addr);
 		} else {
-			fatal("[ dreamcast_g2_unknown: write to addr 0x%x: "
+			fatal("[ dreamcast_g2_gdrom_dma: write to addr 0x%x: "
 			    "0x%x ]\n", (int)relative_addr, (int)idata);
 		}
 
@@ -295,7 +284,51 @@ DEVICE_ACCESS(dreamcast_g2_unknown)
 
 	/*  Default write:  */
 	if (writeflag == MEM_WRITE)
-		d->unknown_reg[relative_addr / sizeof(uint32_t)] = idata;
+		d->gdrom_dma_reg[relative_addr / sizeof(uint32_t)] = idata;
+
+	if (writeflag == MEM_READ)
+		memory_writemax64(cpu, data, len, odata);
+
+	return 1;
+}
+
+
+DEVICE_ACCESS(dreamcast_g2_misc)
+{
+	struct dreamcast_g2_data *d = (struct dreamcast_g2_data *) extra;
+	uint64_t idata = 0, odata = 0;
+
+	if (writeflag == MEM_WRITE)
+		idata = memory_readmax64(cpu, data, len);
+
+	/*  Default read:  */
+	if (writeflag == MEM_READ)
+		odata = d->misc_reg[relative_addr / sizeof(uint32_t)];
+
+	switch (relative_addr) {
+
+	case 0x64:
+		/*  Writing 0x1fffff to 0x5f74e4 resets a disabled GD-ROM drive?  */
+		if (writeflag != MEM_WRITE || idata != 0x1fffff) {
+			fatal("[ dreamcast_g2_misc: unimplemented 0xe4 ]\n");
+			exit(1);
+		}
+		break;
+
+	default:if (writeflag == MEM_READ) {
+			debug("[ dreamcast_g2_misc: read from addr 0x%x ]\n",
+			    (int)relative_addr);
+		} else {
+			debug("[ dreamcast_g2_misc: write to addr 0x%x: "
+			    "0x%x ]\n", (int)relative_addr, (int)idata);
+		}
+
+		/*  exit(1);  */
+	}
+
+	/*  Default write:  */
+	if (writeflag == MEM_WRITE)
+		d->misc_reg[relative_addr / sizeof(uint32_t)] = idata;
 
 	if (writeflag == MEM_READ)
 		memory_writemax64(cpu, data, len, odata);
@@ -313,10 +346,13 @@ DEVINIT(dreamcast_g2)
 	    malloc(sizeof(struct dreamcast_g2_data)));
 	memset(d, 0, sizeof(struct dreamcast_g2_data));
 
-	memory_device_register(machine->memory, devinit->name, 0x005f7400,
-	    0x100, dev_dreamcast_g2_unknown_access, d, DM_DEFAULT, NULL);
+	memory_device_register(machine->memory, "g2_gdrom_dma", 0x005f7400,
+	    0x80, dev_dreamcast_g2_gdrom_dma_access, d, DM_DEFAULT, NULL);
 
-	memory_device_register(machine->memory, devinit->name, 0x005f7800,
+	memory_device_register(machine->memory, "g2_misc", 0x005f7480,
+	    0x80, dev_dreamcast_g2_misc_access, d, DM_DEFAULT, NULL);
+
+	memory_device_register(machine->memory, "g2_extdma", 0x005f7800,
 	    0x100, dev_dreamcast_g2_extdma_access, d, DM_DEFAULT, NULL);
 
 	return 1;
